--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "glob": "^7.2.0",
     "just-safe-get": "^4.0.1",
+    "proper-url-join": "^2.1.1",
     "yaml": "^1.10.2"
   }
 }
