--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/start.js",
+  "bin": "src/bin/cli",
   "scripts": {
     "start": "node src/start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^9.0.0",
     "express": "^4.17.3",
     "glob": "^7.2.0",
     "just-safe-get": "^4.0.1",
